src/ExampleCode/chassis/build/log/idf_py_stdout_output_27208
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\Firmware\src\ExampleCode\chassis\build\bootloader\esp-idf\esptool_py && D:\Espressif\python_env\idf5.3_py3.12_env\Scripts\python.exe D:/Espressif/frameworks/esp-idf-v5.3.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/Firmware/src/ExampleCode/chassis/build/bootloader/bootloader.bin"
Bootloader binary size 0x6880 bytes. 0x780 bytes (7%) free.
[2/8] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/chassis.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/chassis.cpp.obj 
ccache D:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32-elf-g++.exe -DESP_PLATFORM -DIDF_VER=\"v5.3.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/Firmware/src/ExampleCode/chassis/build/config -ID:/Firmware/src/ExampleCode/chassis/main -ID:/Firmware/components/Chassis/src -ID:/Firmware/components/ps3_controller_host/src -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/newlib/platform_include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/include/freertos -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/esp_additions/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include/soc -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include/soc/esp32 -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/dma/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/ldo/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/port/esp32/. -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/port/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/heap/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/log/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/soc/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/soc/esp32 -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/soc/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/hal/platform_port/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/hal/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/hal/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/include/esp32 -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/esp32 -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_common/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/port/soc -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/port/include/private -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/deprecated_include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/include/apps -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/include/apps/sntp -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/lwip/src/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/freertos/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/esp32xx/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/esp32xx/include/arch -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/esp32xx/include/sys -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_gpio/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_ledc/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/bt/include/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/bt/common/osi/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/bt/common/api/include/api -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/bt/common/btc/profile/esp/blufi/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/bt/common/btc/profile/esp/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/bt/common/hci_log/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/bt/host/bluedroid/api/include/api -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/bt/porting/ext/tinycrypt/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_timer/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_wifi/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_wifi/wifi_apps/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_wifi/wifi_apps/nan_app/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_wifi/include/local -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_event/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_phy/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_phy/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_netif/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/nvs_flash/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/spi_flash/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_partition/include -ID:/Firmware/src/ExampleCode/chassis/managed_components/espressif__bdc_motor/include -ID:/Firmware/src/ExampleCode/chassis/managed_components/espressif__bdc_motor/interface -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/Firmware/src/ExampleCode/chassis=. -fmacro-prefix-map=D:/Espressif/frameworks/esp-idf-v5.3.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/chassis.cpp.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\chassis.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/chassis.cpp.obj -c D:/Firmware/src/ExampleCode/chassis/main/chassis.cpp
D:/Firmware/src/ExampleCode/chassis/main/chassis.cpp: In function 'void app_main()':
D:/Firmware/src/ExampleCode/chassis/main/chassis.cpp:115:25: error: narrowing conversion of 'analog_x_num' from 'double' to 'float' [-Werror=narrowing]
  115 |         Velocity vel = {analog_x_num, analog_y_num, 0};
      |                         ^~~~~~~~~~~~
D:/Firmware/src/ExampleCode/chassis/main/chassis.cpp:115:39: error: narrowing conversion of 'analog_y_num' from 'double' to 'float' [-Werror=narrowing]
  115 |         Velocity vel = {analog_x_num, analog_y_num, 0};
      |                                       ^~~~~~~~~~~~
cc1plus.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
